<resources>
    <string name="app_name">ASSIGNMENT_4</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_maps">Map</string>
    <string name="btSpeak">Speak</string>
    <string name="tvTextMatches"></string>
    <string name="sNoOfMatches">No of Matches</string>
    <string name="etSearchHint">Speech  Hint</string>
    <string name="browse_photo">BROWSE PHOTO</string>
    <string name="go_home">Go Home</string>
    <string name="take_photo">Take photo</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="signup">SIGNUP</string>
    <string name="user_name">USER NAME</string>
    <string name="locate_me">Locate Me</string>
    <string name="take_image">Take Image</string>
    <string name="last_name">LAST NAME</string>
    <string name="first_name">FIRST NAME</string>
    <string-array name="saNoOfMatches">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>
</resources>
